# render-playground

./: CMakeLists.txt  LICENSE  README.md  prog
include/: Camera.hpp
shaders/: light-cube-fs.glsl  light-cube-vs.glsl  model-loading-vs.glsl
src/: main.cpp
